fixed alignment issue with movies

--- a/index.css
+++ b/index.css
@@ -98,8 +98,6 @@ header {
 .movie-container {
     width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
     color: #2E2E2F;
 }
